--- a/src/app/edit/usuario-edit/usuario-edit.component.css
+++ b/src/app/edit/usuario-edit/usuario-edit.component.css
@@ -1,10 +1,20 @@
+.edit{
+  background: whitesmoke;
+}
 .caixa-edit {
   height: 100vh;
 }
 
+
+
 .caixa-input {
-    background: rgba(245, 245, 245, 0.575);
-    border-radius: 20px;
+  background: rgba(245, 245, 245, 0.397);
+  border-radius: 20px;
+  height: 630px;
+  margin-bottom: 50px;
+  animation: waves-initial 2s ease-in-out;
+  box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.13);
+  padding: 50px;
 }
 
 img.waves-1 {
@@ -12,7 +22,7 @@ img.waves-1 {
   top: 0;
   background-size: cover;
   height: 100%;
-  animation: waves-animation-2 8s ease-in-out infinite;
+  animation: waves-initial 2s ease-in-out ,waves-1 8s ease-in-out infinite;
 }
 
 
@@ -21,6 +31,152 @@ img.waves-2 {
   top: 0;
   background-size: cover;
   height: 100%;
-  animation: waves-animation-1 8s ease-in-out infinite;
+  animation:  waves-initial 2s ease-in-out ,waves-2 5s ease-in-out infinite;
 }
 
+.form-group label {
+  margin-bottom: 0;
+}
+
+.form-group input {
+    border-radius: 8px;
+}
+
+img.img-blob-2{
+  left :20%;
+  transform: rotate(20deg);
+  top: 40%;
+  width: 80px;
+  animation: blobs-animation 1.5s ease-in-out;
+}
+
+img.img-blob-3{
+  bottom: 5%;
+  right: 5%;
+  width: 100px;
+  transform: rotate(10deg);
+  animation:  blobs-animation 1.5s ease-in-out;
+
+}
+
+img.img-blob-4{
+  right: 15%;
+  transform: rotate(15deg);
+  bottom: 5%;
+  width: 140px;
+  animation:  blobs-animation 1.5s ease-in-out;
+
+}
+
+img.img-blob-5{
+
+  left: 15%;
+  transform: rotate(-30deg);
+  top: 10%;
+  width: 120px;
+  animation:  blobs-animation 1.5s ease-in-out;
+
+}
+
+img.img-blob-6{
+  top: 20%;
+  right: 10%;
+  width: 130px;
+  transform: rotate(-10deg);
+  animation:  blobs-animation 1.5s ease-in-out;
+
+}
+
+img.img-blob-7{
+  left: 5%;
+  bottom: 20%;
+  width: 130px;
+  animation:  blobs-animation 1.5s ease-in-out;
+}
+
+
+.img-edit img{
+  width: 120px;
+  border-radius: 50%;
+}
+
+.form-group{
+  margin-bottom: 12px;
+}
+
+button.button-edit{
+  height: 50px;
+  width: 190px;
+  border-radius: 8px;
+  border: rgb(190, 255, 233) 2px solid;
+  background: aquamarine;
+  color: white;
+  margin-bottom: 15px;
+  transition: 0.8s ease-in-out;
+}
+
+button.button-edit:hover{
+  background: rgb(179, 255, 229);
+  letter-spacing: 1px;
+}
+
+
+
+@keyframes waves-initial {
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
+
+@keyframes waves-1 {
+    0%{
+        transform: translateX(0%);
+    }
+    50%{
+        transform: scaleX(140%);
+    }
+    100%{
+        transform: translateX(0%);
+
+    }
+}
+
+@keyframes waves-2 {
+    0%{
+        transform: translateX(0%);
+    }
+    50%{
+        transform: scaleX(120%);
+    }
+    100%{
+        transform: translateX(0%);
+
+    }
+}
+
+@keyframes blobs-animation{
+ from{
+    opacity: 0;
+    transform: translate(100% , -50%);
+  }
+  to{
+    opacity: 1;
+  }
+}
+
+@keyframes img-animation{
+  0%{
+    transform: translate(0);
+
+  }
+  50%{
+    transform: translateY(20px);
+  }
+  100%{
+    transform: translate(0);
+
+  }
+}
