--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -96,7 +96,7 @@
 
     <div class="col-md-6 post-center position-relative">
       <div class="row">
-        <div class="col-md-12 perfil-post borda">
+        <div class="col-md-12 perfil-post ">
           <img src="{{foto}}" alt="">
         </div>
         <a [routerLink]="['/usuario-edit', id]"><i class="fas fa-cog position-absolute config"></i></a>
@@ -109,8 +109,8 @@
       <div class="row mt-3">
         <div class="col-md-12 d-flex justify-content-center mt-5">
           <!-- <h3 class="text-center">Lucas Cruz</h3> -->
-          <div class="input-busca position-relative">
-            <input type="text" class="form-control" name="pesquisa" placeholder="Faça uma busca"
+          <div class="input-busca position-relative mb-3">
+            <input type="text" class="form-control " name="pesquisa" placeholder="Faça uma busca"
               [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()' [(ngModel)]='descricaoPostagem'
               (keyup)='findByDescricao()'>
             <i class="fas fa-search position-absolute"></i>
@@ -124,7 +124,7 @@
       <div class="tab-content mt-4" id="nav-tabContent">
         <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel"
           aria-labelledby="nav-todasPostagens-tab">
-          <div class="row mt-2 post mb-4 borda" *ngFor="let item of listaPostagens | orderBy : key : reverse">
+          <div class="row mt-2 post mb-4 " *ngFor="let item of listaPostagens | orderBy : key : reverse">
             <div class="col-md-12 ">
               <div class="row mt-2">
                 <div class="col-md-12  post-profile m-0 p-0 d-flex justify-content-around">
@@ -183,7 +183,7 @@
         </div>
 
         <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
-          <div class="row mt-2 post borda" *ngFor='let item of usuario.postagem | orderBy : key : reverse'>
+          <div class="row mt-2 post mb-4 " *ngFor='let item of usuario.postagem | orderBy : key : reverse'>
             <div class="col-md-12 ">
               <div class="row mt-2">
                 <div class="col-md-12  post-profile m-0 p-0 d-flex justify-content-around">
