Corrigindo erro de reposividade da página de Alteração de dados do usuário

--- a/src/app/edit/usuario-edit/usuario-edit.component.html
+++ b/src/app/edit/usuario-edit/usuario-edit.component.html
@@ -13,7 +13,7 @@
     <div class="col-md-6 caixa-input  mt-5  m-3 d-flex align-items-center justify-content-center ">
       <div class="col-md-11  mt-3">
         <div class="img-edit d-flex justify-content-center">
-          <img src="https://i.imgur.com/7Y4FG5P.png" alt="">
+          <img src="{{foto}}" alt="">
         </div>
         <div class="form-group">
           <label for="nome">Nome</label>
