--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -237,8 +237,7 @@ i.config:hover{
 .button {
   position: relative;
   width: 200px;
-  left: 0;
-  top: -200px;
+  top: 0;
 }
 
 button.button-new-post {
@@ -250,7 +249,7 @@ button.button-new-post {
   top: 30px;
   left: 10px;
   margin-left: 20px;
-  transition: .3s ease-in-out;
+  transition: 3.5s ease-in-out;
   border: none;
   border-radius: 5px;
 }
