--- a/src/app/delete/postagem/postagem.component.html
+++ b/src/app/delete/postagem/postagem.component.html
@@ -1,18 +1,25 @@
-<div class="container mb-5 mt-5">
+<div class="container-fluid caixa-deleter d-flex justify-content-center align-items-center flex-column position-relative">
+  <img  class="position-absolute img-persona-1" src="https://i.imgur.com/mkFpuVq.png" alt="">
+  <img  class="position-absolute img-persona-2" src="https://i.imgur.com/EUGMPeB.png" alt="">
+  <img  class="position-absolute img-persona-3" src="https://i.imgur.com/WLJsx0X.png" alt="">
+  <img  class="position-absolute img-persona-4" src="https://i.imgur.com/kH0YJYR.png" alt="">
 
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="text-center text-secondary">Apagar Postagem</h1>
+  <div class="row m-2 caixa-text position-relative">
+    <h3 class="quote">Você está prestes apagar essa Postagem!</h3>
+    <h3 class="line1 position-absolute">Você está prestes apagar essa Postagem!</h3>
+    <h3 class="line2 position-absolute">Você está prestes apagar essa Postagem</h3>
+  </div>
+  <div class="row post-content d-flex justify-content-center">
+    <div class="col-md-4 post m-2">
+      <div class="col-md-12 post-content-text d-flex flex-column mt-3">
+        <h6>{{postagem.titulo}}</h6>
+        <p>{{postagem.descricao}}</p>
+        <a class="mb-1" href="{{postagem.liveLink}}">{{postagem.liveLink}}</a>
+        <span class="mb-3">{{postagem.hashtag}}</span>
+      </div>
     </div>
   </div>
-
-  <div class="row">
-    <div class="col-md-12">
-      <h4 class="text-center text-secondary">Você tem certeza que deseja apagar essa postagem?</h4>
-    </div>
-  </div>
-
-  <div class="row d-flex justify-content-center mt-4">
+  <!-- <div class="row d-flex justify-content-center mt-4">
     <div class="col-md-4">
       <div class="card text-center">
         <div class="card-body">
@@ -20,21 +27,17 @@
           <small class="text-muted" >Tema: {{postagem.tema.descricao}}</small>
           <p class="card-text mt-3">{{postagem.descricao}}</p>
           <p class="card-text">
-         <!-- <small  class="text-muted">{{postagem.dataPublicacao | date: 'dd/MM/yyyy'}} às {{postagem.dataPublicacao | date: 'HH:mm'}}</small></p>-->
+          <small  class="text-muted">{{postagem.dataPublicacao | date: 'dd/MM/yyyy'}} às {{postagem.dataPublicacao | date: 'HH:mm'}}</small></p>
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="row mt-5">
-    <div class="col-md-12 d-flex justify-content-center">
-      <button class="btn btn-danger mr-4" routerLink='/inicio'>Não</button>
-      <button class="btn btn-success" (click)='apagar()'>Sim</button>
-
-
+  <div class="row mt-4">
+    <div class="col-md-12 d-flex justify-content-center ">
+      <button type="button" class="btn btn-1" routerLink='/inicio'>Cancelar</button>
+      <button class="btn-2" (click)='apagar()'>Apagar</button>
     </div>
-
-
   </div>
 
 </div>
