--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -10,6 +10,7 @@ a .button-edit {
   height: 54px;
   position: fixed;
   z-index: 1000;
+  animation: animation-initial 0.8s ease-in-out;
 }
 
 .logo img{
@@ -41,8 +42,8 @@ a .button-edit {
 }
 
 img.img-profile {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   cursor: pointer;
   animation: animation-profile 3s ease-in-out infinite;
@@ -103,6 +104,15 @@ img.img-profile {
   }
   100%{
     transform: translateY(0);
+  }
+}
+
+@keyframes animation-initial{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
   }
 }
 
