--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,8 +8,8 @@
     <a routerLink='/contato'>Contato</a>
   </div>
   <div class="register ">
-    <a routerLink='/logar' class="button-1">SING IN</a>
-    <a routerLink='/cadastrar' href="" class="button-2">REGISTER</a>
+    <a routerLink='/logar' class="button-1">ENTRAR</a>
+    <a routerLink='/cadastrar' href="" class="button-2">REGISTRAR</a>
   </div>
   <div class="toggler">
     <div class="linha-1"></div>
@@ -23,8 +23,7 @@
     <div class="row">
       <div class="col-md-7 col-sm-12 conteudo" #banner>
         <h2>Place2Getter</h2>
-        <h4>Juntando pessoas
-          experiências e histórias.</h4>
+        <h4>Conectando pessoas, histórias e experiências.</h4>
       </div>
     </div>
     <div class="square" #divisorBanner>
@@ -52,8 +51,7 @@
       <img class="vetor-3 rellax" data-rellax-speed="1" src="https://i.imgur.com/O4VxOUA.png" alt="">
       <div class="row ">
         <div class="col-md-12 texto-persona ">
-          <h3>Compartilhe com milhões
-            de jovens seus conhecimentos
+          <h3>Compartilhe seu conhecimento com milhões de jovens
           </h3>
         </div>
       </div>
@@ -68,11 +66,7 @@
     </div>
     <div class="row texto-mentoria  ">
       <div class="col-md-6 ">
-        <h4><span> " </span> Entre os benefícios da mentoria, estão a expansão da rede de contatos, a saída da zona de
-          conforto
-          e o ganho de novas perspectivas.
-          Ele também permite que jovens aprenda por meio das vivências de outros profissionais, que já
-          trilharam um caminho cheio de aprendizados ao longo da carreira.<span> " </span> </h4>
+        <h4><span> " </span> Uma oportunidade para jovens aprenderem por meio de caminhos trilhados por profissionais de referência em suas carreiras. Ela está vinculada com a expansão da rede de contatos, a saída da zona de conforto e o aumento das perspectivas!<span> " </span> </h4>
       </div>
     </div>
     <div class="img-mentor">
@@ -100,7 +94,7 @@
       </div>
       <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column">
         <a href=""><img src="https://i.imgur.com/OvLZf4a.png" alt="">
-          <h3>Fotográfia</h3>
+          <h3>Fotografia</h3>
         </a>
       </div>
       <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column">
@@ -127,7 +121,7 @@
       <div class="circlue-categoria-2"></div>
       <div class="col-md-6 ml-5">
         <h2>Redescubra-se</h2>
-        <p>Através da Place2Getter você contará com diversos conteúdos que irão te inspirar e incentivar
+        <p class="paragrafo-padrao">Através da Place2Getter você contará com diversos conteúdos que irão te inspirar e incentivar
            na transformação do seu futuro profissional.</p>
       </div>
     </div>
@@ -143,7 +137,7 @@
         <h2 class="titulo-mentoria-2">Compartilhando
           experiências </h2>
         <div class="row  m-0 p-0-mentoria">
-          <div class="col-md-8">
+          <div class="col-md-10">
             <p> Compartilhe suas experiências com os jovens que estão em busca de ingressar, mudar e 
               recomeçar suas carreiras no mercado de trabalho.</p>
           </div>
@@ -151,24 +145,8 @@
       </div>
     </div>
   </section>
-  <section class="mentores mt-5">
-    <div class="circlue-mentor-2"></div>
-    <div class="row m-0 p-0 d-flex justify-content-around ">
-      <div class="col-md-6 m-0 p-0  texto-mentoria-3 ">
-        <h2 class="text-center">Trocas contínuas</h2>
-        <div class="row m-0 p-0">
-          <div class="col-md-9">
-            <p>Descubra novos caminhos através da troca de aprendizados que irão contribuir no seu desenvolvimento profissional.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6  m-0 p-0  d-flex justify-content-end ">
-        <img class="mentores-img" src="https://i.imgur.com/XTMgYZ8.png" alt="">
-      </div>
-    </div>
-  </section>
 
-  <section class="section-impacto position-relative">
+  <section class="section-impacto position-relative mt-5">
     <img class="elemento-style position-absolute" src="https://i.imgur.com/9dxlp1Z.png" alt="">
     <div class="container-fluid">
       <div class="row d-flex justify-content-center">
