--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -297,6 +297,7 @@ button.button-new-post:hover {
   background: rgba(255, 255, 255, 0.575);
   margin: 1px;
   animation: card-animation 2s ease-in-out;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.075);
 }
 
 .input-busca input {
