--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -1,35 +1,34 @@
-.conteudo{
-    width: 100%;
-    height: 100vh;
-    overflow-x: hidden;
+.contato{
+    min-width: 100vw;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.conteudo img{
-    background-size: cover;
-    height: 280px;
+.caixa-contato{
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.144);
+    border-radius: 20px;
 }
 
 .inputs{
-    margin-left: 45px;
+    width: 450px;
+    height: 450px;
+    border-top-left-radius: 20px ;
+    border-bottom-left-radius: 20px ;
 }
 
-.inputs input{
-    margin-bottom: 15px;
-}
-.inputs select{
-    width: 320px;
+h4.text-input-contato{
+    color: white;
+    margin-left: 10px;
 }
 
-.borda{
-    border: 1px solid red;
-}
 
-.divisor{
-    border-left: 1px solid red;
-    height: 500px;
-    width: 1px;
-}
 
-.localizacao{
-    margin-left: 100px;
+.social-midias{
+    width: 450px;
+    height: 450px;
+    border-top-right-radius: 20px ;
+    border-bottom-right-radius: 20px ;
+    background: linear-gradient(180deg, #45F3C9 0%, rgba(94, 244, 136, 0.65) 100%);
 }
