--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -77,39 +77,39 @@
       <img src="https://i.imgur.com/Lt0mLyj.png" alt="">
     </div>
   </div>
-  <div class="categorias">
+  <div class="categorias mt-5">
     <!-- <a class="link-categoria " href="">Explore novos caminhos</a> -->
     <h4 class="texto-categoria">Explore novos caminhos</h4>
-    <div class="row m-0 p-0 categoria-itens">
-      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column">
+    <div class="row m-0 p-0 categoria-itens ">
+      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column item ">
         <a href=""><img src="https://i.imgur.com/vqkYemi.png" alt="">
         </a>
         <h3>Design</h3>
       </div>
-      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column">
+      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column item">
         <a href=""><img src="https://i.imgur.com/c5fWK2o.png" alt="">
           <h3>Culinária</h3>
         </a>
 
       </div>
-      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column">
+      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column item">
         <a href=""><img src="https://i.imgur.com/OvLZf4a.png" alt="">
           <h3>Fotografia</h3>
         </a>
       </div>
-      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column">
+      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column item">
         <a href=""><img src="https://i.imgur.com/pOywQZS.png" alt="">
           <h3>Comunicação</h3>
         </a>
 
       </div>
-      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column">
+      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column item">
         <a href=""><img src="https://i.imgur.com/AfOVVeN.png" alt="">
           <h3>Programação</h3>
         </a>
 
       </div>
-      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column">
+      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column item">
         <a href=""><img src="https://i.imgur.com/VJazxZT.png" alt="">
           <h3>Estética</h3>
         </a>
@@ -119,26 +119,26 @@
     <div class="row m-0 p-0 texto-categoria">
       <div class="circlue-categoria"></div>
       <div class="circlue-categoria-2"></div>
-      <div class="col-md-6 ml-5">
-        <h2>Redescubra-se</h2>
+      <div class="col-md-6 ml-5 texto-categoria-2">
+        <h2 class='titulo-categoria'>Redescubra-se</h2>
         <p class="paragrafo-padrao">Através da Place2Getter você contará com diversos conteúdos que irão te inspirar e incentivar
            na transformação do seu futuro profissional.</p>
       </div>
     </div>
   </div>
 
-  <section class="mentores">
+  <section class="mentores mb-5 mt-5">
     <div class="circlue-mentor"></div>
     <div class="row m-0 p-0 ">
       <div class="col-md-6 m-0 p-0 section">
-        <img class="img-fluid mentores-img" src="https://i.imgur.com/cpxZoUn.png" alt="">
+        <img class="img-fluid mentores-img" src="https://i.imgur.com/um19R8G.jpg" alt="">
       </div>
       <div class="col-md-6 m-0 p-0  texto-mentoria-2 ">
         <h2 class="titulo-mentoria-2">Compartilhando
           experiências </h2>
         <div class="row  m-0 p-0-mentoria">
           <div class="col-md-10">
-            <p> Compartilhe suas experiências com os jovens que estão em busca de ingressar, mudar e 
+            <p class="paragrafro-mentoria"> Compartilhe suas experiências com os jovens que estão em busca de ingressar, mudar e 
               recomeçar suas carreiras no mercado de trabalho.</p>
           </div>
         </div>
@@ -146,23 +146,23 @@
     </div>
   </section>
 
-  <section class="section-impacto position-relative mt-5">
+  <section class="section-impacto position-relative">
     <img class="elemento-style position-absolute" src="https://i.imgur.com/9dxlp1Z.png" alt="">
     <div class="container-fluid">
       <div class="row d-flex justify-content-center">
-        <div class="col-md-3 ml-5 d-flex justify-content-center position-relative">
+        <div class="col-md-3 ml-5 d-flex pt-5 justify-content-center position-relative">
           <img class="impacto-img img-fluid" src="https://i.imgur.com/BrBQC1a.jpg" alt="">
-          <div class="caixa-persona position-absolute"></div>
+          <div class="caixa-persona box-color position-absolute"></div>
         </div>
         <div class="col-md-8">
-          <h2>Compartilhando
+          <h2 class="titulo-impacto">Compartilhando
             vivências.</h2>
           <div class="row mt-5 pt-5 d-flex justify-content-around">
             <div class="col-md-5 d-flex justify-content-center position-relative">
               <img class="impacto-img img-fluid " src="https://i.imgur.com/dJjSOTo.jpg" alt="">
-              <div class="caixa-persona-2 position-absolute"></div>
+              <div class="caixa-persona-2 box-color position-absolute"></div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 paragrafo-impacto">
               <img class="position-absolute aspas" src="https://i.imgur.com/mPpN6Jp.png" alt="">
               <p>Jovens que desejam adquirir <span>habilidades</span> e conhecimentos nas mais diversas áreas através da
                 nossa rede social.</p>
@@ -180,7 +180,7 @@
     </div>
     <div class="row m-0 p-0 ">
       <div class="col-md-3  d-flex align-items-center flex-column">
-        <img src="https://i.imgur.com/g6JNNuB.png" alt="">
+        <!-- <img src="https://i.imgur.com/g6JNNuB.png" alt=""> -->
         <h3>Fernando Merim</h3>
         <small>Dev. Full Stack Java Jr.</small>
         <p>Formado em Ciências Contábeis e atualmente cursando Sistemas de Informação. Ser referência, fazer a diferença e simplificar a vida das pessoas através da tecnologia são os meus objetivos. </p>
