--- a/src/src/app/delete/postagem/postagem.component.html
+++ b/src/src/app/delete/postagem/postagem.component.html
@@ -35,7 +35,7 @@
 
   <div class="row mt-4">
     <div class="col-md-12 d-flex justify-content-center ">
-      <button type="button" class="btn btn-1" routerLink= "['/inicio']" >Cancelar</button>
+      <button type="button" class="btn btn-1" routerLink='/inicio'>Cancelar</button>
       <button class="btn-2" (click)='apagar()'>Apagar</button>
     </div>
   </div>
