--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,20 +1,95 @@
-<div class="container-fluid contato borda m-0 p-0 d-flex justify-content-center align-items-center">
-  <div class="row borda caixa-contato">
-    <div class="col-md-6 inputs borda">
-      <div class="row borda">
-        <div class="col-md-12">
+<div class="container-fluid contato d-flex justify-content-center align-items-center position-relative">
+  <img class="img-vetor position-absolute d-none d-md-block"
+    src="https://raw.githubusercontent.com/sefyudem/Contact-Form-HTML-CSS/master/img/shape.png" alt="">
+  <div class="row caixa-contato">
+    <div class="col-md-6 inputs m-auto">
+      <div class="row">
+        <div class="col-md-12 mt-4">
           <h4 class="text-center">Place2Getter</h4>
+        </div>
+        <div class="col-md-12 mb-4">
+          <p>Experiencie cenários reais, encontre sua nova jornada profissional!
+          </p>
+        </div>
+      </div>
+
+      <div class="row d-flex ">
+        <div class="col-md-12">
+          <div class="row m-3 icone-contatos">
+            <div class="col-md-2  d-flex justify-content-center">
+              <i class="fas fa-map-marker-alt"></i>
+            </div>
+            <div class="col-md-8 d-flex align-items-center m-0 p-0">
+              <span>Brazil São Paulo</span>
+            </div>
+          </div>
+
+          <div class="row m-3 icone-contatos">
+            <div class="col-md-2  d-flex justify-content-center">
+              <i class="far fa-envelope"></i>
+            </div>
+            <div class="col-md-8 d-flex align-items-center m-0 p-0">
+              <span>place2getter@gmail.com</span>
+            </div>
+          </div>
+
+          <div class="row m-3 icone-contatos">
+            <div class="col-md-2  d-flex justify-content-center">
+              <i class="fas fa-phone-alt"></i>
+            </div>
+            <div class="col-md-8 d-flex align-items-center m-0 p-0">
+              <span>(11) 77777-7777</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5 links-social-midias">
+        <div class="col-md-12 ">
+          <h5 class="text-center">Nossas redes Sociais</h5>
+        </div>
+      </div>
+      <div class="row links-social-midias d-flex justify-content-center">
+        <div class="col-md-1  d-flex justify-content-center align-items-center link-item">
+          <a href=""><i class="fab fa-github"></i></a>
+        </div>
+        <div class="col-md-1  d-flex justify-content-center align-items-center link-item">
+          <a href=""><i class="fab fa-facebook-f"></i></a>
+        </div>
+        <div class="col-md-1  d-flex justify-content-center align-items-center link-item">
+          <a href=""><i class="fab fa-instagram"></i></a>
         </div>
       </div>
     </div>
-    <div class="col-md-6 social-midias borda">
-      <div class="row borda mt-5">
+
+    <div class="col-md-6 social-midias position-relative m-auto">
+      <div class="row mt-4 ">
         <div class="col-md-12">
           <h4 class="text-input-contato">Contato</h4>
         </div>
+        <div class="row  p-2 ml-0 pl-0">
+          <div class="col-md-12">
+            <div class="form-group input-contato">
+
+              <label for="">Nome:</label>
+              <input type="text" name="nome-input" class="form-control" placeholder="Informe o seu nome">
+
+              <label for="">E-mail:</label>
+              <input type="text" name="nome-input" class="form-control" placeholder="Informe o seu E-mail">
+
+              <label for="">Mensagem:</label>
+              <textarea type="text" name="nome-input" class="form-control"
+                placeholder="Nos conte o motivo do seu contato" aria-expanded="false" rows="4"></textarea>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="circlue-one"></div>
-      <div class="circlue-two"></div>
+      <div class="row  d-flex justify-content-center">
+        <div class="col-md-3  m-0 p-0">
+          <button class="button-contato">Enviar</button>
+        </div>
+      </div>
+      <div class="circlue-one position-absolute"></div>
+      <div class="circlue-two position-absolute"></div>
     </div>
   </div>
 </div>
